# temperature-server-exercise

./: .gitignore  README.md  docker-compose.yml
fake-sensor/: Dockerfile  fake-sensor.py
frontend/: Dockerfile  nginx_no_proxy_pass.conf  nginx_with_proxy_pass.conf
frontend/frontend/: package-lock.json  package.json
frontend/frontend/src/app/: app-routing.module.ts  app.module.ts  config-loader.service.ts  config.ts  temperature.ts  temperatures.service.spec.ts  temperatures.service.ts
frontend/frontend/src/app/temperatures-chart/: temperatures-chart.component.html  temperatures-chart.component.spec.ts  temperatures-chart.component.ts
frontend/frontend/src/app/temperatures-table/: temperatures-table.component.html  temperatures-table.component.spec.ts  temperatures-table.component.ts
frontend/frontend/src/assets/: config.json
temperature-collector/: Dockerfile
temperature-collector/temperaturecollector/: Cargo.toml  default.toml
temperature-collector/temperaturecollector/src/: config.rs  datagram_listener.rs  lib.rs  main.rs  temperature_data_redis.rs  temperaturedata.rs  tests.rs
tse-backend/: Dockerfile
tse-backend/tsebackend/: Cargo.toml  Rocket.toml
tse-backend/tsebackend/src/: lib.rs  main.rs  temperaturedata.rs
tse-backend/tsebackend/src/server/: mod.rs  redisdbconn.rs
