[package]
name = "tsebackend"
version = "0.1.0"
authors = ["amreo <amreo@live.it>"]

[dependencies]
rocket = "0.3.14"
rocket_codegen = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
r2d2="0.8"
redis = "0.8.0"
r2d2_redis="0.7.0"

[dependencies.rocket_contrib]
version = "0.3.14"
features = ["json"]
